exports[`renderInput renders correctly 1`] = `
<div
  className="uk-form-row">
  <input
    autoComplete=""
    className=""
    id={undefined}
    name=""
    onBlur={[Function onBlur]}
    onChange={[Function onChange]}
    onDragStart={[Function onDragStart]}
    onDrop={[Function onDrop]}
    onFocus={[Function onFocus]}
    placeholder={undefined}
    value="" />
</div>
`;

exports[`renderInput renders correctly 2`] = `
<div
  className="uk-form-row">
  <label
    className="uk-form-label"
    htmlFor="">
    E-mail
  </label>
  <div
    className="uk-form-controls">
    <input
      autoComplete=""
      className=""
      id=""
      name="email"
      onBlur={[Function onBlur]}
      onChange={[Function onChange]}
      onDragStart={[Function onDragStart]}
      onDrop={[Function onDrop]}
      onFocus={[Function onFocus]}
      placeholder="E-mail"
      type="email"
      value="" />
  </div>
</div>
`;

exports[`renderInput renders correctly 3`] = `
<div
  className="uk-form-row">
  <label
    className="uk-form-label"
    htmlFor="">
    E-mail
  </label>
  <div
    className="uk-form-controls">
    <input
      autoComplete=""
      className=""
      id=""
      name="email"
      onBlur={[Function onBlur]}
      onChange={[Function onChange]}
      onDragStart={[Function onDragStart]}
      onDrop={[Function onDrop]}
      onFocus={[Function onFocus]}
      placeholder="E-mail"
      type="email"
      value="" />
    <p
      className="uk-form-help-inline">
      This message is replaced by any validation errors.
    </p>
  </div>
</div>
`;
